--- a/containers/nextjs/front-end/package.json
+++ b/containers/nextjs/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "js-cookie": "^3.0.5",
