--- a/containers/nextjs/front-end/package.json
+++ b/containers/nextjs/front-end/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@nextui-org/tooltip": "^2.0.39",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
